add missing jwt code

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "JWT Template",
-  "name": "MERN Stack JWT Template",
+  "short_name": "Script Stud.io",
+  "name": "Script Stud.io MERN Stack App",
   "icons": [
     {
       "src": "favicon.ico",
