added highlighter functionality, need to integrate into snippet preview page and tighten up create snippet function

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "ace-builds": "^1.4.12",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
@@ -15,10 +16,14 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.2",
     "morgan": "^1.10.0",
+    "prism": "^4.1.2",
     "react": "^16.13.1",
+    "react-ace": "^9.4.0",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
+    "react-syntax-highlighter": "^15.4.3",
+    "refractor": "^3.3.1",
     "semantic-ui-react": "^2.0.3",
     "tailwindcss": "^2.1.1"
   },
